fixed layout issue with Safari and new column grouping

--- a/src/styles/ag-grid.styl
+++ b/src/styles/ag-grid.styl
@@ -81,7 +81,6 @@ ag-grid-ng2
 .ag-header-group-cell
     display: inline-block
     box-sizing: border-box
-    text-align: center
     text-overflow: ellipsis
     overflow: hidden
     //float: left // safari doesn't align if we don't float
@@ -99,10 +98,15 @@ ag-grid-ng2
     width: 4px
     float: right
     cursor: col-resize
-    //display: table-cell
 
-.ag-header-group-text {}
-    //float: left
+// both ag-header-group-text and ag-header-expand-icon have display of table-cell,
+// as with inline-block, the layout messed up in Safari (not problems in the others).
+.ag-header-group-text
+    display table-cell
+
+.ag-header-expand-icon
+    display table-cell
+    padding-left 4px
 
 .ag-header-cell-menu-button
     float: right
